fix links spacing

--- a/src/index.css
+++ b/src/index.css
@@ -260,6 +260,7 @@ main {
   width: 24px;
   height: 24px;
   padding: 12px;
+  margin-top: 2px;
 }
 
 .icon-link {
